# mops-pred

./: .gitignore  README.md  install.sh  pyproject.toml  test_processor.py
configs/: deeplabv3_affordance.py  deeplabv3_affordance_kitchen.py  deeplabv3_semantic.py  default_config.py  resnet50_config.py  segformer_affordance.py  segformer_affordance_kitchen.py  vit_clf_config.py  wandb_config.py
configs/datasets/: clutter_affordance_config.py  clutter_segmentation_config.py  kitchen_affordance_config.py  obj_centr_config.py
mops_pred/: test_clip.py  test_dinov2_segmentation.py  train_and_test_clip.py  train_and_test_dinov2_segmentation.py  training.py
mops_pred/datasets/: __init__.py  base_h5.py  clutter.py  dataset_factory.py  object_centric.py
mops_pred/models/: __init__.py  model_factory.py  object_classifier.py  segm_transformer.py  segmentation.py
src/mops_pred/datasets/: __init__.py  object_centric.py
