[build-system]
# XXX: If your project needs other packages to build properly, add them to this list.
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"


[project]
name = "mops-pred"
version = "1.0.0"
authors = [
    {name = "Maximilian Xiling Li", email="maximilian.xiling.li@gmail.com"}
]
readme = "README.md"
dependencies = [
    "h5py>=3.15.1",
    "lightning>=2.6.0",
    "ml-collections>=1.1.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
]

[tool.setuptools.packages.find]
include = ["mops_pred*", "configs*"]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
